src/index.css
#root {
  width: 100%;
  height: 100vh;
}

:focus {
  outline: none;
}

@font-face {
  font-family: LiberationSans;
  src: url(./fonts/LiberationSans-Regular.ttf);
}

@font-face {
  font-family: FranklinGothicBook;
  src: url(./fonts/franklingothic-book.otf);
}

@font-face {
  font-family: GhostLight;
  src: url(./fonts/Ghostlight-Regular.ttf);
}

body {
  position: absolute;
  top: 0px;
  width: 100%;
  height: 100%;
  background-image: url("./img/Background.png");
  opacity: 0.75;
  z-index: 50;
}

